<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.captainkids.captainkids.RegisterActivity">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="215dp"
        android:layout_height="46dp"
        android:layout_marginEnd="112dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        android:textColor="#AAAAAA"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="87dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/mot_de_passe"
        android:textColor="#AAAAAA"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:background="#0AC5D3"
        android:backgroundTint="#0AC5D3"
        android:colorButtonNormal="#3578A9"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:text="@string/s_inscrire"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/textViewSignin"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginBottom="132dp"
        android:layout_marginEnd="220dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:text="@string/se_connecter"
        android:textColor="#0AC5D3"
        app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

</android.support.constraint.ConstraintLayout>

