<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.captainkids.captainkids.MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="215dp"
        android:layout_height="46dp"
        android:layout_marginEnd="112dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textColor="#AAAAAA"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="87dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="10dp"
        android:contentDescription="Mot de passe"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/mot_de_passe"
        android:textColor="#AAAAAA"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="46dp"/>

    <Button
        android:id="@+id/signinbtn"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:background="#0AC5D3"
        android:backgroundTint="#0AC5D3"
        android:colorButtonNormal="#3578A9"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:text="Se connecter"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/registerbtn"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginBottom="146dp"
        android:layout_marginEnd="236dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="@string/s_inscrire"
        android:textColor="#0AC5D3"
        app:layout_constraintBottom_toTopOf="@+id/signinbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

</android.support.constraint.ConstraintLayout>
