<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.captainkids.captainkids.ChoiceActivity">





    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="614dp"
        android:background="@drawable/background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </LinearLayout>

    <Button
        android:id="@+id/accompagnerbtn"
        style="@android:style/Widget.DeviceDefault.Light.Button"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="212dp"
        android:background="#FFF"
        android:paddingEnd="70dp"
        android:paddingStart="70dp"
        android:text="@string/tre_accompagnateur"
        android:textAlignment="textStart"
        android:textColor="#0AC5D3"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:background="#FFF"
        android:paddingEnd="70dp"
        android:paddingStart="70dp"
        android:text="@string/je_fais_accompagner"
        android:textAlignment="textStart"
        android:textColor="#0AC5D3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accompagnerbtn" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginEnd="144dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/clement"
        app:civ_border_color="#0AC5D3"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/bonjour_cl_ment"
        android:textAlignment="center"
        android:textColor="#0AC5D3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="16dp"
        android:text="@string/que_voulez_vous_faire_avec_vos_3_points"
        android:textAlignment="center"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</android.support.constraint.ConstraintLayout>